--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
  
   <footer>
     <img src="logo.png" alt="Logo" class="footer-logo">
-    <p>Tristan Name</p>
-    <p>tristan@example.com</p>
+    <p>Tristan</p>
+    <p>t8468820@gmail.com</p>
   </footer>
 </body>
 </html>
